--- a/style.css
+++ b/style.css
@@ -3,3 +3,6 @@
 @import "css/basic.css";
 @import "css/var.css";
 @import "css/hero.css";
+@import "css/main.css";
+@import "css/callback.css";
+@import "css/footer.css";
