--- a/css/global.css
+++ b/css/global.css
@@ -16,7 +16,7 @@ body {
   font-family: Roboto, sans-serif;
   font-size: 22px;
   background-color: var(--color-FFFFFF);
-  color: var(--color-000000);
+  color: var(--color-FFFFFF);
 }
 
 img {
@@ -36,6 +36,7 @@ button {
 a {
   color: inherit;
   text-decoration: none;
+  cursor: pointer;
 }
 
 ul, ol, h1, h2, h3, h4, p, figure, fieldset, blockquote {
