--- a/css/hero.css
+++ b/css/hero.css
@@ -1,29 +1,47 @@
-.hero__container{
+.hero__container {
   height: 732px;
   background-image: url("../img/hero/hero_bg.jpg");
 }
 
-.hero__wrapper{
+.hero__wrapper {
   padding-top: 40px;
   max-width: 1200px;
   margin: 0 auto;
   text-align: center;
 }
 
-.hero__top-bar{
+.hero__top-bar {
   display: flex;
   justify-content: space-between;
   margin-bottom: 120px;
 }
 
-.hero__title{
+.hero__title {
   max-width: 990px;
   margin: 0 auto;
   margin-bottom: 35px;
+  font-weight: 900;
+  font-size: 52px;
+  line-height: 61px;
 }
 
-.hero__text{
+.hero__text {
   max-width: 960px;
   margin: 0 auto;
   margin-bottom: 90px;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 31px;
 }
+
+.hero__button {
+  border: none;
+  width: 200px;
+  height: 48px;
+  background: #15A9CB;
+  box-shadow: 0px 4px 25px rgba(21, 169, 203, 0.3);
+  border-radius: 50px;
+  color: inherit;
+  padding: 12px 48px;
+}
+
