--- a/css/basic.css
+++ b/css/basic.css
@@ -7,6 +7,14 @@
 
 @font-face {
   font-family: "Roboto";
+  src: local("Roboto Medium"), local("Roboto-Medium"), url("../font/Roboto-Medium.ttf") format("truetype");
+  font-weight: 500;
+  font-display: swap;
+}
+
+
+@font-face {
+  font-family: "Roboto";
   src: local("Roboto Bold"), local("Roboto-Bold"), url("../font/Roboto-Bold.ttf") format("truetype");
   font-weight: 700;
   font-display: swap;
