--- a/css/advantages.css
+++ b/css/advantages.css
@@ -34,7 +34,7 @@
   background: #383A4C;
 }
 
-.advantages__text{
+.advantages__text {
   width: 724px;
   margin: 0 auto;
   font-weight: 400;
@@ -43,3 +43,39 @@
   margin-bottom: 50px;
 }
 
+.advantages_list {
+  width: calc(1267px - 333px);
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  margin-bottom: 70px;
+}
+
+.advantages__item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.advantages_block-text {
+  width: 122px;
+  height: 122px;
+  border-radius: 100px;
+  background-color: var(--color-23C7EC);
+  margin-bottom: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--color-FFFFFF);
+  font-weight: 500;
+  font-size: 57px;
+  line-height: 100%;
+}
+
+.advantages__under-text{
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 28px;
+  width: 196px;
+}
