--- a/css/hero.css
+++ b/css/hero.css
@@ -10,9 +10,10 @@
   text-align: center;
 }
 
-.hero__top-bar {
+.hero__block-bar {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   margin-bottom: 120px;
 }
 
@@ -34,14 +35,6 @@
   line-height: 31px;
 }
 
-.hero__button {
-  border: none;
-  width: 200px;
-  height: 48px;
-  background: #15A9CB;
-  box-shadow: 0px 4px 25px rgba(21, 169, 203, 0.3);
-  border-radius: 50px;
-  color: inherit;
+.hero__button{
   padding: 12px 48px;
 }
-
