--- a/css/hero.css
+++ b/css/hero.css
@@ -1,5 +1,5 @@
 .hero__container {
-  height: 732px;
+  min-height: 732px;
   background-image: url("../img/hero/hero_bg.jpg");
 }
 
@@ -19,8 +19,7 @@
 
 .hero__title {
   max-width: 990px;
-  margin: 0 auto;
-  margin-bottom: 35px;
+  margin: 0 auto 35px auto;
   font-weight: 900;
   font-size: 52px;
   line-height: 61px;
@@ -28,8 +27,7 @@
 
 .hero__text {
   max-width: 960px;
-  margin: 0 auto;
-  margin-bottom: 90px;
+  margin: 0 auto 90px auto;
   font-weight: 400;
   font-size: 22px;
   line-height: 31px;
@@ -37,4 +35,27 @@
 
 .hero__button{
   padding: 12px 48px;
+}
+
+@media (max-width: 1024px) {
+  .hero__logo {
+    width: 60px;
+    height: 60px;
+  }
+
+  .hero__block-bar {
+    padding: 0 30px;
+  }
+
+  .hero__title {
+    font-size: 40px;
+    line-height: 47px;
+    max-width: 780px;
+  }
+
+  .hero__text {
+    font-size: 18px;
+    line-height: 25px;
+    max-width: 754px;
+  }
 }
