--- a/css/hero.css
+++ b/css/hero.css
@@ -62,7 +62,19 @@
 }
 
 @media (max-width: 320px) {
+  .hero__logo{
+    width: 30px;
+    height: 30px;
+  }
 
+  .hero__wrapper{
+    padding-top: 15px;
+  }
+
+  .hero__block-bar {
+    padding: 0 15px;
+    margin-bottom: 120px;
+  }
 
   .hero__button{
     margin-bottom: 65px;
