--- a/css/basic.css
+++ b/css/basic.css
@@ -43,6 +43,7 @@
   font-weight: 400;
   font-size: 24px;
   line-height: 28px;
+  margin-bottom: 4px;
 }
 
 .phone-small{
@@ -112,17 +113,5 @@
   .blue-button {
     font-size: 16px;
     line-height: 19px;
-  }
-
-  .phone-small{
-    display: block;
-  }
-
-  .phone {
-    display: none;
-  }
-
-  .call-me-back {
-    display: none;
   }
 }
