--- a/css/callback.css
+++ b/css/callback.css
@@ -1,10 +1,10 @@
 .callback__container {
-  min-height: 621px;
+  padding-top: 70px;
+  padding-bottom: 70px;
   background-image: url("../img/callback/bg.jpg");
 }
 
 .callback__wrapper {
-  padding-top: 70px;
   text-align: center;
 }
 
@@ -58,6 +58,9 @@
 }
 
 @media (max-width: 1024px) {
+  .callback__container {
+    padding-bottom: 56px;
+  }
 
   .callback-form-block {
     max-width: 379px;
@@ -68,4 +71,12 @@
     font-size: 17px;
     line-height: 20px;
   }
+}
+
+@media (max-width: 456px) {
+  .callback__container {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+
 }
