--- a/css/hero.css
+++ b/css/hero.css
@@ -1,10 +1,10 @@
 .hero__container {
-  min-height: 732px;
+  padding-top: 40px;
+  padding-bottom: 65px;
   background-image: url("../img/hero/hero_bg.jpg");
 }
 
 .hero__wrapper {
-  padding-top: 40px;
   max-width: 1200px;
   margin: 0 auto;
   text-align: center;
@@ -33,12 +33,16 @@
   line-height: 31px;
 }
 
-.hero__button{
+.hero__button {
   padding: 12px 48px;
-  margin-bottom: 70px;
 }
 
 @media (max-width: 1024px) {
+  .hero__container {
+    padding-top: 26px;
+    padding-bottom: 70px;
+  }
+
   .hero__logo {
     width: 60px;
     height: 60px;
@@ -62,21 +66,34 @@
 }
 
 @media (max-width: 320px) {
-  .hero__logo{
+  .hero__logo {
     width: 30px;
     height: 30px;
   }
 
-  .hero__wrapper{
+  .hero__wrapper {
     padding-top: 15px;
   }
 
   .hero__block-bar {
     padding: 0 15px;
-    margin-bottom: 120px;
+    margin-bottom: 65px;
   }
 
-  .hero__button{
-    margin-bottom: 65px;
+  .hero__title {
+    font-size: 20px;
+    line-height: 23px;
+    margin-bottom: 23px;
+  }
+
+  .hero__text {
+    font-size: 14px;
+    line-height: 20px;
+    margin-bottom: 54px;
+  }
+
+  .hero__container {
+    padding-top: 18px;
+    padding-bottom: 65px;
   }
 }
