--- a/css/basic.css
+++ b/css/basic.css
@@ -120,4 +120,14 @@
     font-size: 16px;
     line-height: 19px;
   }
+
+  .subtitle {
+    font-size: 20px;
+    line-height: 23px;
+  }
+
+  .undertitle-text {
+    font-size: 16px;
+    line-height: 19px;
+  }
 }
