--- a/css/advantages.css
+++ b/css/advantages.css
@@ -42,7 +42,7 @@
   max-width: 196px;
 }
 
-.advantages_list {
+.advantages__list {
   max-width: calc(1267px - 333px);
   margin: 0 auto;
   display: flex;
@@ -52,6 +52,10 @@
   /*column-gap: 50px;*/
   row-gap: 40px;
   counter-reset: count 0;
+}
+
+.advantages__slider{
+  display: none;
 }
 
 .advantages_block-text {
@@ -118,7 +122,7 @@
 }
 
 @media (max-width: 730px) {
-  .advantages_list {
+  .advantages__list {
     justify-content: center;
   }
 
@@ -144,4 +148,10 @@
     --cart-count: 1;
     --flex-basis-current-value: calc(100% / var(--cart-count) - (var(--gap) * (var(--cart-count) - 1)) / var(--cart-count));
   }
+}
+
+@media (max-width: 320px) {
+  /*.advantages__list{*/
+  /*  display: none;*/
+  /*}*/
 }
