--- a/css/hero.css
+++ b/css/hero.css
@@ -1,6 +1,17 @@
 .hero {
   background-image: url("../img/hero/hero_bg_1600.jpg");
   background-size: cover;
+  z-index: 1;
+  position: relative;
+}
+
+.hero:before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(47, 50, 75, .85);
+  z-index: -1;
 }
 
 .hero__container {
@@ -66,7 +77,7 @@
     background-image: url("../img/hero/hero_bg_320.jpg");
   }
 
-  .hero__container{
+  .hero__container {
     padding-top: 15px;
   }
 
