--- a/css/callback.css
+++ b/css/callback.css
@@ -1,6 +1,17 @@
 .callback {
   background-image: url("../img/callback/callback_bg_1600.jpg");
   background-size: cover;
+  z-index: 1;
+  position: relative;
+}
+
+.callback:before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(47, 50, 75, .85);
+  z-index: -1;
 }
 
 .callback__container {
@@ -60,7 +71,7 @@
 
 @media (max-width: 1024px) {
   .callback {
-    background-image: url("../img/callback/callback_bg_1024.jpg");
+    background-position: center;
   }
 
   .callback__container {
@@ -83,9 +94,7 @@
     padding-top: 30px;
     padding-bottom: 30px;
   }
-  .callback {
-    background-image: url("../img/callback/callback_bg_320.jpg");
-  }
+
   .callback__text-agreement {
     font-size: 11px;
     line-height: 13px;
