--- a/css/basic.css
+++ b/css/basic.css
@@ -40,10 +40,11 @@
 }
 
 .phone {
+  margin-top: -1.7px;
   font-weight: 400;
-  font-size: 24px;
-  line-height: 28px;
-  margin-bottom: 4px;
+  font-size: 23.85px;
+  line-height: 27.95px;
+
 }
 
 .call-me-back {
@@ -52,9 +53,10 @@
   color: inherit;
   font-weight: 400;
   font-size: 16px;
-  line-height: 19px;
+  line-height: 18.75px;
   text-decoration: underline;
   text-underline-position: under;
+  margin-top: 1px;
 }
 
 .subtitle {
@@ -78,12 +80,12 @@
 .undertitle-text {
   font-weight: 500;
   font-size: 22px;
-  line-height: 26px;
+  line-height: 25.78px;
 }
 
 .logo {
-  width: 60px;
-  height: 60px;
+  width: 68px;
+  height: 68px;
 }
 
 @media (max-width: 1200px) {
