--- a/css/hero.css
+++ b/css/hero.css
@@ -16,7 +16,7 @@
 
 .hero__container {
   padding-top: 40px;
-  padding-bottom: 65px;
+  padding-bottom: 120px;
   max-width: 1200px;
   margin: 0 auto;
   text-align: center;
@@ -35,6 +35,7 @@
   font-weight: 900;
   font-size: 52px;
   line-height: 61px;
+  margin-top: -5px;
 }
 
 .hero__text {
@@ -43,10 +44,12 @@
   font-weight: 400;
   font-size: 22px;
   line-height: 31px;
+  margin-top: -3px;
 }
 
 .hero__button {
   padding: 12px 48px;
+  margin-top: -1px;
 }
 
 @media (max-width: 1024px) {
