--- a/css/advantages.css
+++ b/css/advantages.css
@@ -10,7 +10,7 @@
 
 .advantages__subtitle {
   margin-bottom: 27px;
-  
+
 }
 
 .advantages__about-us {
@@ -140,7 +140,7 @@
 }
 
 @media (max-width: 480px) {
-  .advantages__container {
+  .advantages {
     padding-top: 30px;
     padding-bottom: 60px;
   }
