--- a/css/footer.css
+++ b/css/footer.css
@@ -51,22 +51,7 @@
   }
 }
 
-@media (max-width: 480px) {
-  .logo {
-    width: 30px;
-    height: 30px;
-  }
-
-  .footer__copyrights {
-    font-size: 8px;
-    line-height: 11px;
-    max-width: 90px;
-  }
-
-  .footer {
-    padding-top: 25px;
-    padding-bottom: 25px;
-  }
+@media (max-width: 665px) {
 
   .footer__block-bar{
     position: relative;
@@ -85,12 +70,35 @@
     position: absolute;
     text-align: center;
     left: 0;
-    top: 60px;
+    top: 120px;
     width: 100%;
     order: 1;
     background-color: var(--color-2a2c3f);
     opacity: 1;
     color: gray;
     padding: 15px 0;
+  }
+
+}
+
+@media (max-width: 480px) {
+  .logo {
+    width: 30px;
+    height: 30px;
+  }
+
+  .footer__copyrights {
+    font-size: 8px;
+    line-height: 11px;
+    max-width: 90px;
+  }
+
+  .footer {
+    padding-top: 25px;
+    padding-bottom: 25px;
+  }
+
+  .footer__made-by{
+    top: 60px;
   }
 }
