--- a/css/basic.css
+++ b/css/basic.css
@@ -40,7 +40,8 @@
 }
 
 .phone {
-  margin-top: -1.7px;
+  margin-top: -8.7px;
+  margin-left: 1px;
   font-weight: 400;
   font-size: 23.85px;
   line-height: 27.95px;
@@ -56,7 +57,7 @@
   line-height: 18.75px;
   text-decoration: underline;
   text-underline-position: under;
-  margin-top: 1px;
+  padding-top: 8px;
 }
 
 .subtitle {
