--- a/css/footer.css
+++ b/css/footer.css
@@ -35,7 +35,7 @@
   font-weight: 500;
   font-size: 12px;
   line-height: 17px;
-  opacity: .5;
+  opacity: 1;
   padding-bottom: 3.2px;
   padding-right: 5px;
 }
@@ -52,6 +52,10 @@
   .footer {
     padding-top: 49px;
     padding-bottom: 49px;
+  }
+
+  .footer__made-by{
+    opacity: .5;
   }
 }
 
